fixed broken css references on some pages

--- a/src/main/resources/public/css/stylesheet.css
+++ b/src/main/resources/public/css/stylesheet.css
@@ -2,3 +2,14 @@ form  { display: table;      }
 form > p     { display: table-row;  }
 label { display: table-cell; }
 input, textarea { display: table-cell; } 
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#logo {
+    font-size: 90px;
+    margin: 0;
+}
